test/pointer/fail/ptr_cl01.v3
//@execute (false, false)=true; (false, true)=false; (true, false)=false; (true, true)=true
component ptr_cl01 {
	def main(x: bool, y: bool) -> bool {
		var p: Pointer, q = p.add(1);
		var f = if(x, p.load<byte>, q.load<byte>);
		var g = if(y, p.load<byte>, q.load<byte>);
		return cmp(f, g);
	}
	def cmp(f: void -> byte, g: void -> byte) -> bool {
		return f == g;
	}
}
